--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ header {
 main {
     background-color: #7fffd4;
     width: 100%;
-    height: 1000px;
+    padding: 110px;
 }
 
 .my_title {
@@ -22,10 +22,6 @@ main {
     border: 1px solid grey;
 }
 
-.my_main {
-    padding-top: 110px;
-}
-
 div.grid {
     margin: 0 auto;
     width: 1000px;
@@ -34,9 +30,13 @@ div.grid {
     border: 1px solid black;
 }
 
-div.grid.cell {
+div.grid .cell {
     width: calc(100% / 10);
     height: calc(100% / 10);
     border: 1px solid black;
     cursor: pointer;
+}
+
+div.cell.selected {
+    background-color: lightskyblue;
 }
