Add grid border

--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,11 @@ div.grid {
     margin: 0 auto;
     width: 1000px;
     height: 1000px;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
+
+}
+
+.grid-border {
     border: 1px solid black;
 }
 
