--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,7 @@ div.grid .cell p {
     text-align: center;
     font-size: 2rem;
     line-height: 100px;
+    margin-bottom: 0;
 }
 
 div.cell.selected {
